force-app/main/default/objects/Address/fields/IsPostbox__c.field-meta.xml
<CustomField>
    <fullName>IsPostbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsPostbox</label>
    <type>Checkbox</type>
</CustomField>