force-app/main/default/objects/Address/fields/PostBox__c.field-meta.xml
<CustomField>
    <fullName>PostBox__c</fullName>
    <label>Post Box</label>
    <length>100</length>
    <type>Text</type>
</CustomField>