force-app/main/default/objects/Address/fields/StreetAddress__c.field-meta.xml
<CustomField>
    <fullName>StreetAddress__c</fullName>
    <formula>Street</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>StreetAddress</label>
    <type>Text</type>
</CustomField>